fix about alignment

--- a/styles.css
+++ b/styles.css
@@ -371,7 +371,7 @@ hr {
 /* if width < */
 @media (max-width: 1040px) {
     .project {
-        padding: 0px 10px 10px 10px;
+        padding: 0px 10px 10px 0px;
 
     }
     .yardstick.project {
